--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.11.1",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-mdx": "^5.9.0",
+    "gatsby-plugin-page-creator": "^5.9.0",
     "gatsby-plugin-react-helmet": "^6.9.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gatsby-source-filesystem": "^5.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0"
   }
 }
